# RFClassifier

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  kinect_demo.cpp  predict.cpp  train.cpp  train_multistage.cpp
src/: CMakeLists.txt  Frame.cpp  Frame.hpp  Node.cpp  Node.hpp  OpenCLKernel.cpp  OpenCLKernel.hpp  OpenCLManager.cpp  OpenCLManager.hpp  RandomForest.cpp  RandomForest.hpp  RandomForestGPU.cpp  RandomForestGPU.hpp  RandomGenerator.cpp  RandomGenerator.hpp  RandomGenerator2.cpp  RandomGeneratorSpecial.cpp  Settings.cpp  cl_utils.cpp  cl_utils.hpp  common.hpp
src/gpu_kernels/: kernels.cl  kernels.cu  test.cl
test/: CMakeLists.txt  test_frame.cpp  test_node.cpp
